

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.myapplication2.app.MainActivity$PlaceholderFragment">

    <EditText
        android:id="@+id/edit_message"
        android:layout_weight="1"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/edit_message"/>

    <Button
        android:id="@+id/button_send"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="sendMessage"
        android:hint="@string/button_send"
        android:layout_gravity="center_vertical" />
    <Button
        android:id="@+id/voice_send"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="sendVoice"
        android:hint="@string/voice_send"
        android:layout_weight="0.04" />
    <Button
        android:id="@+id/openApp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="openApp"
        android:hint="@string/openApp"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_gravity="right"
        android:layout_weight="1" />


</LinearLayout>


