<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.myapplication2.app.MailActivity">
    <TableRow>
        <EditText
            android:id="@+id/edit_address"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/edit_address"/>
    </TableRow>
    <TableRow>
        <EditText
            android:id="@+id/edit_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/edit_title"/>
    </TableRow>
    <EditText
        android:id="@+id/edit_mail"
        android:layout_width="fill_parent"
        android:layout_height="400dp"
        android:hint="@string/edit_mail"/>

</TableLayout>
